--- a/src/windows/WindowMain.form
+++ b/src/windows/WindowMain.form
@@ -65,12 +65,12 @@
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnDrinkActionPerformed"/>
           </Events>
         </Component>
-        <Component class="javax.swing.JButton" name="btnMesa">
+        <Component class="javax.swing.JButton" name="btnTable">
           <Properties>
             <Property name="text" type="java.lang.String" value="Mesa"/>
           </Properties>
           <Events>
-            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnMesaActionPerformed"/>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnTableActionPerformed"/>
           </Events>
         </Component>
         <Component class="javax.swing.JButton" name="btnClose">
