--- a/src/windows/WindowBoxOrderDisplay.form
+++ b/src/windows/WindowBoxOrderDisplay.form
@@ -212,6 +212,9 @@
               <Properties>
                 <Property name="text" type="java.lang.String" value="Imprimir"/>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnImpressActionPerformed"/>
+              </Events>
             </Component>
           </SubComponents>
         </Container>
